--- a/lists/templates/base.html
+++ b/lists/templates/base.html
@@ -1,40 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
 
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-COMPATIBLE" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>To-Do lists</title>
-        <link rel="stylesheet" href="/static/bootstrap/css/bootstrap.min.css">
-        <link rel="stylesheet" href="/static/base.css">
-    </head>
-    <body>
-        <div class="container">
-            <div class="row">
-                <div class="col-md-6 col-md-offset-3 jumbotron">
-                    <div class="text-center">
-                        <h1>{% block header_text %}{% endblock %}</h1>
-                        <form method="POST" action="{% block form_action %}{% endblock %}">
-                            {{ form.text }}
-                            {% csrf_token %}
-                            {% if form.errors %}
-                              <div class="form-group has-error">
-                                  <div class="help-block">{{ form.text.errors }}</div>
-                              </div>
-                            {% endif %}
-                        </form>
-                    </div>
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col-md-6 col-md-offset-3">
-                    {% block table %}
-                    {% endblock %}
-                </div>
-            </div>
-
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-COMPATIBLE" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>To-Do lists</title>
+    <link rel="stylesheet" href="/static/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/static/base.css">
+  </head>
+  <body>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6 col-md-offset-3 jumbotron">
+          <div class="text-center">
+            <h1>{% block header_text %}{% endblock %}</h1>
+            <form method="POST" action="{% block form_action %}{% endblock %}">
+              {{ form.text }}
+              {% csrf_token %}
+              {% if form.errors %}
+              <div class="form-group has-error">
+                <div class="help-block">{{ form.text.errors }}</div>
+              </div>
+              {% endif %}
+            </form>
+          </div>
         </div>
+      </div>
+      <div class="row">
+        <div class="col-md-6 col-md-offset-3">
+          {% block table %}
+          {% endblock %}
+        </div>
+      </div>
+    </div>
+    <script type="text/javascript" src="/static/jquery-3.4.1.min.js"></script>]
+    <script type="text/javascript" src="/static/list.js"></script>
+    <script type="text/javascript">
+        initialize();
+    </script>
     </body>
 </html>
