Add ability to click and hide error messages as well as using key presses

--- a/lists/templates/base.html
+++ b/lists/templates/base.html
@@ -37,7 +37,11 @@
     <script type="text/javascript" src="/static/jquery-3.4.1.min.js"></script>]
     <script type="text/javascript" src="/static/list.js"></script>
     <script type="text/javascript">
-        initialize();
+
+      $(document).ready(function () {
+        window.Superlists.initialize();
+      });
+
     </script>
     </body>
 </html>
