--- a/lists/templates/base.html
+++ b/lists/templates/base.html
@@ -11,6 +11,16 @@
   </head>
   <body>
     <div class="container">
+      <div class="navbar navbar-default" role="navigation">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="/">Superlists</a>
+          <form class="navbar-form navbar-right" method="POST" action="#">
+            <span>Enter email to log in:</span>
+            <input class="form-control" type="text" name="email">
+            {% csrf_token %}
+          </form>
+        </div>
+      </div>
       <div class="row">
         <div class="col-md-6 col-md-offset-3 jumbotron">
           <div class="text-center">
